--- a/old_index.html
+++ b/old_index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="fr"><!--AJOUT DE LANG-->
+<html lang="Default">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"><!--META OBSOLETE?-->
-    <meta name="description" content=""><!--AJOUT DE description a faire-->
+    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style_modifie.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>La Panthère</title><!--AJOUT DE TITRE-->
+    <title>.</title>
 
     
 <!-- Analytics -->
@@ -36,16 +36,20 @@
 	<div class="container bloc-sm">
 
 		<nav class="navbar row">
-			<div class="navbar-header"><!--SUPPRESSION DES DIV KEYWORDS-->
+			<div class="navbar-header">
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-				<ul class="site-navigation nav navbar-nav"><!--SUPPRESSION DU li VIDE-->
+				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
+					</li>
+					<li>
 					</li>
 					<li>
 						<a href="page2.html">page2 &gt;</a>
@@ -79,8 +83,8 @@
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col-sm-12 text-center"><!-- SUPPRESSION DE L'IMAGE ET ECRITURE DU TEXTE-->
-				<h3>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet</h3>
+			<div class="col-sm-12 text-center">
+				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -91,8 +95,8 @@
 				<h3 class="mg-md text-center">
 					Web design
 				</h3>
-				<p class="text-center "><!-- SUPPRESSION DE "&rsquo;"-->
-					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+				<p class="text-center ">
+					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -119,9 +123,8 @@
 			</div>
 		</div>
 		<div class="row voffset-lg voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center"><!-- SUPPRESSION DE L'IMAGE ET ECRITURE DU TEXTE-->
-				<q>L'agence La Panthère est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
-				<p>Maxime Guibard, PDG de À vos fourchettes</p>
+			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
 
 			</div>
 		</div>
@@ -242,6 +245,7 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
+					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
