--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <img class="panthere" src="./img/agence-la-panthere-monochrome.svg" alt="La Panthère">
         </div>
         <div class="container">
-            <a class="btn" href="index.html">
+            <a class="btn" href="old_index.html">
                 Ancienne version
             </a>
-            <a class="btn" href="index_modifie.html">
+            <a class="btn" href="modified_index.html">
                 Nouvelle version
             </a>
         </div>
