--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     </head>
     <body>
         <div class="logo">
-            <img class="panthere" src="./img/agence-la-panthere-monochrome.svg" alt="La Panthère">
+            <img class="panthere" src="./nouvelle_version/img/agence-la-panthere.svg" alt="La Panthère">
         </div>
         <div class="container">
-            <a class="btn" href="old_index.html">
+            <a class="btn" href="./ancienne_version/old_index.html">
                 Ancienne version
             </a>
-            <a class="btn" href="modified_index.html">
+            <a class="btn" href="./nouvelle_version/modified_index.html">
                 Nouvelle version
             </a>
         </div>
