--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+        <link rel="shortcut icon" type="image/png" href="./nouvelle_version/favicon.jpg">
         <title>La Panthère</title>
     </head>
     <body>
