--- a/nouvelle_version/modified_index.html
+++ b/nouvelle_version/modified_index.html
@@ -29,10 +29,10 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<div class="page-container">
+<main class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 
 		<nav class="navbar row">
@@ -54,7 +54,7 @@
 			</div>
 		</nav>
 	</div>
-</div>
+</header>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
@@ -212,6 +212,9 @@
 	</div>
 </div>
 <!-- bloc-5-cta END -->
+</main>
+<!-- Principal conteneur END -->
+
 
 <!-- Footer - bloc-8 -->
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
@@ -257,10 +260,8 @@
 		</div>
 	</div>
 </footer>
-<!-- Footer - bloc-8 END -->
 
-</div>
-<!-- Principal conteneur END -->
+<!-- Footer - bloc-8 END -->
     
 
 </body>
