--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <img class="panthere" src="./nouvelle_version/img/agence-la-panthere.svg" alt="La Panthère">
         </div>
         <div class="container">
-            <a class="btn" target="_blank" href="./ancienne_version/old_index.html">
+            <a class="btn" target="_blank" href="./ancienne_version/index.html">
                 Ancienne version
             </a>
-            <a class="btn" target="_blank" href="./nouvelle_version/modified_index.html">
+            <a class="btn" target="_blank" href="./nouvelle_version/index.html">
                 Nouvelle version
             </a>
         </div>
