--- a/nouvelle_version/index.html
+++ b/nouvelle_version/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style_modifie.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
@@ -48,7 +48,7 @@
 						<a id="tab_actif" href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="./page2_modifie.html">Contact</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -67,7 +67,7 @@
 					Agence La Panthère
 				</h1>
 				<div class="text-center">
-					<a href="./page2_modifie.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -138,7 +138,7 @@
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="./page2_modifie.html">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -206,7 +206,7 @@
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="./page2_modifie.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
@@ -230,22 +230,22 @@
 				<div class="rs">
 					<div class="rs_link">
 						<div class="text-center">
-							<a class ="social" href="./modified_index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
+							<a class ="social" href="index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="rs_link">
 						<div class="text-center">
-							<a class ="social" href="./modified_index.html">Facebook<span class="fa fa-facebook icon-md"></span></a>
+							<a class ="social" href="index.html">Facebook<span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="rs_link">
 						<div class="text-center">
-							<a class ="social" href="./modified_index.html">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
+							<a class ="social" href="index.html">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="rs_link">
 						<div class="text-center">
-							<a class ="social" href="./modified_index.html">Instagram<span class="fa fa-instagram icon-md"></span></a>
+							<a class ="social" href="index.html">Instagram<span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
