--- a/nouvelle_version/page2.html
+++ b/nouvelle_version/page2.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="../nouvelle_version/style_modifie.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
@@ -37,7 +37,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="./modified_index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" width="216.9"/></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" width="216.9"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -45,10 +45,10 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav"> <!-- SUPPRESSION DU li VIDE -->
 					<li>
-						<a href="./modified_index.html">Accueil</a>
+						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a id="tab_actif" href="./page2_modifie.html">Contact</a>
+						<a id="tab_actif" href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -142,22 +142,22 @@
 				<div class="rs">
 					<div class="rs_link">
 						<div class="text-center">
-							<a class ="social" href="./modified_index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
+							<a class ="social" href="index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="rs_link">
 						<div class="text-center">
-							<a class ="social" href="./modified_index.html">Facebook<span class="fa fa-facebook icon-md"></span></a>
+							<a class ="social" href="index.html">Facebook<span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="rs_link">
 						<div class="text-center">
-							<a class ="social" href="./modified_index.html">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
+							<a class ="social" href="index.html">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="rs_link">
 						<div class="text-center">
-							<a class ="social" href="./modified_index.html">Instagram<span class="fa fa-instagram icon-md"></span></a>
+							<a class ="social" href="index.html">Instagram<span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
