--- a/nouvelle_version/contact.html
+++ b/nouvelle_version/contact.html
@@ -48,7 +48,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a id="tab_actif" href="page2.html">Contact</a>
+						<a id="tab_actif" href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
