--- a/nouvelle_version/contact.html
+++ b/nouvelle_version/contact.html
@@ -37,7 +37,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" width="216.9"/></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" width="217"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -80,24 +80,24 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate >
 					<div class="form-group"> <!--AJOUT DE SPECIFICITE AU FORM COMME LE NOM DU INPUT OU FOR DE LABEL-->
 						<label for="name">
 							Nom
 						</label>
-						<input type="text" name="nom" id="name" class="form-control"/>
+						<input type="text" name="nom" id="name" class="form-control">
 					</div>
 					<div class="form-group">
 						<label for="email">
 							Adresse email
 						</label>
-						<input name="mail" id="email" class="form-control" type="email"/>
+						<input name="mail" id="email" class="form-control" type="email">
 					</div>
 					<div class="form-group">
 						<label for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
-						<input name="connaitre" class="form-control" type="text" id="input_504" />
+						<input name="connaitre" class="form-control" type="text" id="input_504">
 					</div>
 					<div class="form-group">
 						<label for="message">
@@ -114,7 +114,7 @@
 					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 				<div id="map_container">
-					<iframe title="Google Map" id= "map"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.082950655514!2d4.827978614937964!3d45.76952782103983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Pl.%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1666103965638!5m2!1sfr!2sfr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					<iframe title="Google Map" id= "map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.082950655514!2d4.827978614937964!3d45.76952782103983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Pl.%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1666103965638!5m2!1sfr!2sfr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</div>
 		</div>
