--- a/nouvelle_version/index.html
+++ b/nouvelle_version/index.html
@@ -80,7 +80,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center"><!-- SUPPRESSION DE L'IMAGE ET ECRITURE DU TEXTE-->
-				<h2>L'agence La Panthère est une agence de web design qui aide<br> les entreprises à devenir attractives et visibles sur Internet.</h2>
+				<h2 id="h_titre">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -120,7 +120,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center"><!-- SUPPRESSION DE L'IMAGE ET ECRITURE DU TEXTE-->
-				<p id="citation">&ldquo;L'agence La Panthère est une excellente agence web! Les<br> web designers ont réussi à capturer l'essence de notre<br> entreprise et à l'intégrer à notre site. Cela nous a aidé à<br>doubler nos ventes en ligne à Lyon.&rdquo;</p>
+				<p id="citation">&ldquo;L'agence La Panthère est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.&rdquo;</p>
 				<p id="citation_auteur">Maxime Guibard, PDG de À vos fourchettes</p>
 
 			</div>
